# parallax

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
conda/: meta.yaml
differ/src/: classifier.rs  csv_output.rs  differ.rs  flamegraph.rs  json_output.rs  lib.rs  main.rs  parser.rs  report.rs  site_map.rs  trace_format.rs
differ/src/tui/: aligned.rs  app.rs  input.rs  mod.rs  render.rs  source_cache.rs
differ/tests/: test_differ.rs
examples/: instrumented_divergence.cu  loop_divergence.cu  matmul_divergence.cu  occupancy_test.cu  run_all_demos.sh
gpu-diffdbg/: .gitignore  CMakeLists.txt  Makefile  PHASE_5.md  README.md  gddbg  gddbg-sites.json  package.sh  prlx  pyproject.toml  setup.py  test_triton_divergence.py
gpu-diffdbg/build-prlx/: CTestTestfile.cmake  Makefile
gpu-diffdbg/build-prlx/examples/: CTestTestfile.cmake  Makefile  instrumented_divergence  loop_divergence  matmul_divergence  occupancy_test
gpu-diffdbg/build-prlx/lib/pass/: Makefile
gpu-diffdbg/build-prlx/lib/runtime/: Makefile  prlx_runtime_nvptx.bc
gpu-diffdbg/build-prlx/tests/: CTestTestfile.cmake  Makefile  divergence_test  manual_trace_test
gpu-diffdbg/build-prlx/tools/: CTestTestfile.cmake  Makefile  dump_trace
gpu-diffdbg/differ/: Cargo.toml
gpu-diffdbg/differ/examples/: demonstrate_features.sh
gpu-diffdbg/differ/src/: differ.rs  lib.rs  main.rs  parser.rs  report.rs  site_map.rs  trace_format.rs
gpu-diffdbg/differ/src/tui/: aligned.rs  render.rs
gpu-diffdbg/differ/tests/: test_differ.rs
gpu-diffdbg/docs/: ARCHITECTURE.md
gpu-diffdbg/examples/: CMakeLists.txt  README.md  instrumented_divergence.cu  loop_divergence.cu  matmul_divergence.cu  occupancy_test.cu  run_all_demos.sh
gpu-diffdbg/lib/common/: trace_format.h
gpu-diffdbg/lib/nvbit_tool/: CMakeLists.txt  inject_funcs.cu  trace_writer.cu  trace_writer.h
gpu-diffdbg/lib/pass/: CMakeLists.txt  GpuDiffDbgPass.cpp  GpuDiffDbgPass.h  PrlxPass.cpp  PrlxPass.h  SiteTable.cpp  SiteTable.h
gpu-diffdbg/lib/runtime/: CMakeLists.txt  gddbg_host.cu  gddbg_runtime.cu  gddbg_runtime.h  prlx_host.cu
gpu-diffdbg/python/: pyproject.toml
gpu-diffdbg/python/gddbg/: __init__.py  _find_lib.py  runtime.py  trace_reader.py  triton_hook.py
gpu-diffdbg/python/gpu_diffdbg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gpu-diffdbg/python/prlx/: __init__.py  _find_lib.py  cli.py  runtime.py  trace_reader.py  triton_hook.py
gpu-diffdbg/scripts/: build_wheel.sh  compile_instrumented.sh  run_diff.sh
gpu-diffdbg/tests/: CMakeLists.txt  test_auto_instrumentation.sh
gpu-diffdbg/tests/kernels/: auto_instrumented_test.cu  divergence_test.cu  manual_trace_test.cu  simple_branch.cu
gpu-diffdbg/tools/: check_layout.c  dump_trace.cpp
gpu-diffdbg/tools/gddbg-diff/: Cargo.toml
gpu-diffdbg/tools/gddbg-diff/src/: differ.rs  main.rs  report.rs  trace_format.rs
lib/common/: trace_format.h
lib/nvbit_tool/: CMakeLists.txt  common.h  inject_funcs.cu  nvbit_prlx.cu  site_table.cu  site_table.h  trace_writer.cu  trace_writer.h
lib/nvbit_tool/tests/: CMakeLists.txt  test_site_table.cpp  test_trace_writer.cpp
lib/nvbit_tool/tool_func/: flush_channel.cu
lib/pass/: CMakeLists.txt  PrlxPass.cpp  PrlxPass.h  SiteTable.cpp  SiteTable.h
lib/runtime/: CMakeLists.txt  prlx_host.cu  prlx_host_hip.cpp  prlx_runtime.cu  prlx_runtime.h  prlx_runtime_hip.cpp
notebooks/: prlx_colab_test.ipynb
python/prlx/: __init__.py  _cuda_driver.py  _find_lib.py  _hip_driver.py  _log.py  _module_binder.py  cli.py  pytorch_hook.py  runtime.py  trace_reader.py  training_monitor.py  triton_hook.py  viz.py
python/tests/: conftest.py  test_assert.py  test_cli.py  test_flamegraph.py  test_logging.py  test_pytorch.py  test_query_api.py  test_session.py  test_trace_reader.py  test_training_monitor.py  test_viz.py
scripts/: build_wheel.sh
tests/: CMakeLists.txt  test_auto_instrumentation.sh  test_e2e.sh
tests/kernels/: divergence_test.cu  manual_trace_test.cu  simple_branch.cu
tools/: CMakeLists.txt
