[package]
name = "prlx-diff"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
colored = "2.0"
rayon = "1.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "prlx_diff"
path = "src/lib.rs"

[[bin]]
name = "prlx-diff"
path = "src/main.rs"
