[package]
name = "gddbg-diff"
version = "0.1.0"
edition = "2021"
authors = ["GPU DiffDbg Contributors"]
description = "Differential debugging tool for CUDA GPU kernels - trace comparison utility"
license = "MIT OR Apache-2.0"

[[bin]]
name = "gddbg-diff"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
rayon = "1.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
